<resources>
    <string name="app_name">ClarityApplication</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="profile">Profile</string>
    <string name="calendar">Calendar</string>
    <string name="deadlines">Deadlines</string>
    <string name="settings">Settings</string>
    <string name="dashboard">Dashboard</string>
    <string name="logo">Logo</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="add_task">Add Task</string>
    <string name="emotions">emotions</string>
    <string name="task_list">Task List</string>
    <string name="back">Back</string>
    <string name="new_task">New Task</string>
    <string name="what_are_you_planning">What are you planning?</string>
    <string name="delete">Delete</string>
    <string name="delete_task">Delete Task</string>
    <string name="save">SAVE</string>
    <string name="x">X</string>
</resources>