<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/bg_taskbar"
            app:contentInsetStart="0dp"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:background="@drawable/input_bg"
                    android:contentDescription="@string/delete"
                    android:drawableLeft="@drawable/ic_close"
                    android:gravity="center|start" />


                <TextView
                    android:id="@+id/toolbar_title"
                    android:layout_width="264dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/new_task"
                    android:textColor="#FF5D8FF4"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:ignore="TextContrastCheck" />

            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <EditText
            android:id="@+id/taskTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/custom_config"
            android:background="#FFFFFF"
            android:gravity="top"
            android:hint="@string/what_are_you_planning"
            android:inputType="textMultiLine"
            android:padding="20dp"
            android:textColorHint="#CDD1D5"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize"
            android:importantForAutofill="no" />



        <LinearLayout
            android:id="@+id/custom_config"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/deleteTask"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingHorizontal="30dp"
            android:paddingVertical="20dp">

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:src="@drawable/cal"
                android:contentDescription="@string/calendar" />

            <TextView
                android:id="@+id/dateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/deleteTask"
            android:layout_width="51dp"
            android:layout_height="36dp"
            android:layout_above="@+id/save_btn"
            android:layout_marginBottom="579dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingHorizontal="30dp"
            android:paddingVertical="20dp"
            android:visibility="gone">

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:contentDescription="@string/delete"
                android:src="@drawable/del"
                app:tint="#EC5D5D" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/delete_task"
                android:textColor="#EC5D5D"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>


        <Button
            android:id="@+id/save_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:background="@drawable/bg_savebtn"
            android:onClick="saveTask"
            android:paddingVertical="15dp"
            android:text="@string/save"
            android:textColor="#FF5D8FF4"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck,TextContrastCheck,VisualLintButtonSize" />

    </RelativeLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>